# poc-service-catalog

./: .gitignore  .infrahub.yml  .yamllint.yml  Dockerfile  Dockerfile-service  InfrahubDockerfile  README.md  StreamlitDockerfile  docker-compose.override.yml  docker-compose.yml  menu.yml  pyproject.toml  repository.yaml  tasks.py
.github/workflows/: ci.yml  sync-docs.yml
.vale/styles/: spelling-exceptions.txt
data/: 02_groups.yaml  02_groups_tags.yml  03_ipam_domain.yaml  05_resource_pools.yml  07_device_template.yaml  07_device_template.yml  08_device.yaml
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: home.mdx  readme.mdx
docs/docs/getting-started/: developer-walkthrough.mdx  installation.mdx  user-walkthrough.mdx  walkthrough.mdx
docs/src/components/VideoPlayer/: index.tsx
generators/: dedicated_internet.gql  implement_dedicated_internet.py
protocols/: asynchronous.py  synchronous.py
schemas/: data.py
schemas/base/: dcim.yml  ipam.yml  location.yml
schemas/service/: service.yml
schemas/vlan/: vlan.yml
service_catalog/: README.md  infrahub.py  protocols.py  protocols_async.py  protocols_sync.py  pyproject.toml  🏠_Home_Page.py
service_catalog/pages/: 0_📦_Service_Requests.py  1_🔌_Dedicated_Internet.py  2_🛜_Wireless.py
service_catalog/service_catalog/: Landing.py  infrahub.py  🏠_Home_Page.py
service_catalog/service_catalog/pages/: 0_📦_Service_Requests.py  1_🔌_Dedicated_Internet.py
tests/: __init__.py  conftest.py
tests/fixtures/schemas/: schema01.json
tests/integration/: test_create_service.py
tests/unit/: test_generator.py  test_infrahub_utils.py  test_portal.py
