[tool.poetry]
name = "service-catalog"
version = "0.1.0"
description = ""
authors = ["Baptiste <baptiste@opsmill.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
infrahub-sdk = {version = "^0,>=0.12.0", extras = ["all"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
